--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 /*** Global Settings ****/
+@media only screen and (max-width: 320px) {
+  table, form, input {
+    width: 100%;
+    max-width: 100%;
+  }
+  img {
+    max-width: 100%;
+  }
+}
+
+
 body {
 	color : #18283f;
 	margin : 0;
 	padding : 0;
 	background: #FFFFFF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
+	font-family: Helvetica, Arial, sans-serif;
+	#font-size: 16pt;
 	font-style: normal;
-	line-height: 1.6em;
+	#line-height: 1.6em;
 	font-weight: normal;
 	font-variant: normal;
 }
@@ -16,12 +27,13 @@ p {
 	padding: 0px;
 	margin: 0px;
 	margin-top: 5px;
-	font-size: large;
+	font-size: 120%;
+	line-height: 1.2;
+	color: #18283f;
 }
 
 table.invisible {
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 120%;
 	font-weight: normal;
 	text-decoration: none;
 	border-top-style: none;
@@ -45,15 +57,17 @@ table.invisible {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 40px;
+	height: 60px;
 	background-color:#e7e1c6;
 	color: white;
 	z-index: +1;
 }
 
 .header_content {
+    display: flex;
+    align-items: center;
 	width:700px;
-	height: 32px;
+	height: 60px;
 	position: relative;
 	margin-top: 0;
 	margin-right: auto;
@@ -68,8 +82,7 @@ table.invisible {
 
 .header_title {
 	color: #562f32;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 24px;
+	font-size: 120%;
 	font-weight: bold;
 	line-height: 100%;
 }
@@ -86,14 +99,13 @@ table.invisible {
 	height: 250px;
 	padding-top: 0px;
 	background-color:#e7e1c6;
+    #background-color: #4CAF50;
+
 }
 
 .banner_content {
 	position: relative;
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
+	margin: auto;
 	height: 250px;
 	width: 700px;
 	background-image: url(images/alan_turing.png);
@@ -106,7 +118,7 @@ table.invisible {
 .banner_title {
 	color: #562f32;
 	font-family: Helvetica, Arial, sans-serif;
-	font-size: 48px;
+	font-size: 200%;
 	font-weight: bold;
 	line-height: 100%;
 	#text-shadow: 2px 2px white;
@@ -116,28 +128,66 @@ table.invisible {
 
 .banner_subtitle {
 	color: #18283f;
-	font-size: 32px;
+	font-size: 140%;
 	font-family: Helvetica, Arial, sans-serif;
 	font-weight: bold;
 	#text-shadow: 2px 2px white;
 	margin-top: 15px;
-   text-align: right;
+    text-align: right;
 }
 
 .nav {
 	position: relative;
 	width: 100%;
-	height: 32px;
+	#height: 40px;
 	background-color: #18283f;
 }
 
 .nav_fixed {
 	position: fixed;
-	top: 40px;
+	top: 60px;
 	width: 100%;
-	height: 32px;
+	#height: 40px;
 	background-color: #18283f;
 	z-index: +1;
+}
+
+.nav_content {
+    display: flex;
+    align-items: center;
+    width: 700px;
+    margin: auto;
+    font-size: 120%;
+    color: white;
+}
+
+.nav_content ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #18283f;
+}
+
+.nav_content li {
+    float: left;
+}
+
+.nav_content li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 4px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.nav_content li a:hover {
+    background-color: #182830;
+}
+
+.nav_content .active {
+    background-color: #4CAF50;
 }
 
 .headersep {
@@ -171,7 +221,8 @@ table.invisible {
 	#background-color: #dddddd;
 	
 	font-family: Helvetica, Arial, sans-serif;
-	font-size: 48px;
+	font-size: 200%;
+	font-weight: bold;
 	color: #562f32;
 	margin-top: 15px;
 }
