--- a/style.css
+++ b/style.css
@@ -1,26 +1,11 @@
 /*** Global Settings ****/
-@media only screen and (max-width: 320px) {
-  table, form, input {
-    width: 100%;
-    max-width: 100%;
-  }
-  img {
-    max-width: 100%;
-  }
-}
-
-
 body {
 	color : #18283f;
 	margin : 0;
 	padding : 0;
-	background: #FFFFFF;
+	background: transparent;
 	font-family: Helvetica, Arial, sans-serif;
 	#font-size: 16pt;
-	font-style: normal;
-	#line-height: 1.6em;
-	font-weight: normal;
-	font-variant: normal;
 }
 
 p {
@@ -28,14 +13,10 @@ p {
 	margin: 0px;
 	margin-top: 5px;
 	font-size: 120%;
-	line-height: 1.2;
 	color: #18283f;
 }
 
 table.invisible {
-	font-size: 120%;
-	font-weight: normal;
-	text-decoration: none;
 	border-top-style: none;
 	border-right-style: none;
 	border-bottom-style: none;
@@ -64,12 +45,12 @@ table.invisible {
 }
 
 .header_content {
-    display: flex;
-    align-items: center;
-	width:700px;
+   display: flex;
+   align-items: center;
+	max-width: 700px;
 	height: 60px;
 	position: relative;
-	margin-top: 0;
+	margin-top: 0px;
 	margin-right: auto;
 	margin-bottom: 0px;
 	margin-left: auto;
@@ -82,11 +63,9 @@ table.invisible {
 
 .header_title {
 	color: #562f32;
-	font-size: 120%;
+	font-size: 200%;
 	font-weight: bold;
-	line-height: 100%;
 }
-
 
 
 .banner {
@@ -99,15 +78,13 @@ table.invisible {
 	height: 250px;
 	padding-top: 0px;
 	background-color:#e7e1c6;
-    #background-color: #4CAF50;
-
 }
 
 .banner_content {
 	position: relative;
 	margin: auto;
 	height: 250px;
-	width: 700px;
+	max-width: 700px;
 	background-image: url(images/alan_turing.png);
 	background-position: left;
 	background-repeat: no-repeat;
@@ -117,8 +94,8 @@ table.invisible {
 
 .banner_title {
 	color: #562f32;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 200%;
+	#font-family: Helvetica, Arial, sans-serif;
+	font-size: 300%;
 	font-weight: bold;
 	line-height: 100%;
 	#text-shadow: 2px 2px white;
@@ -128,17 +105,24 @@ table.invisible {
 
 .banner_subtitle {
 	color: #18283f;
-	font-size: 140%;
-	font-family: Helvetica, Arial, sans-serif;
+	font-size: 160%;
+	#font-family: Helvetica, Arial, sans-serif;
 	font-weight: bold;
 	#text-shadow: 2px 2px white;
+	line-height: 140%;
 	margin-top: 15px;
-    text-align: right;
+   text-align: right;
 }
 
 .nav {
 	position: relative;
 	width: 100%;
+	border-top-color:white;
+	border-top-style: solid;
+	border-top-width: medium;
+	border-bottom-color: white;
+	border-bottom-style: solid;
+	border-bottom-width: medium;
 	#height: 40px;
 	background-color: #18283f;
 }
@@ -147,48 +131,61 @@ table.invisible {
 	position: fixed;
 	top: 60px;
 	width: 100%;
+	border-top-color:white;
+	border-top-style: solid;
+	border-top-width: medium;
+	border-bottom-color: white;
+	border-bottom-style: solid;
+	border-bottom-width: medium;
 	#height: 40px;
 	background-color: #18283f;
 	z-index: +1;
 }
 
 .nav_content {
-    display: flex;
-    align-items: center;
-    width: 700px;
-    margin: auto;
-    font-size: 120%;
-    color: white;
+	display: flex;
+	align-items: center;
+   max-width: 700px;
+   margin: auto;
+   font-size: 140%;
+   color: white;
 }
+ 
 
 .nav_content ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #18283f;
+	display: table;
+	list-style-type: none;
+ 	margin: 0 auto;
+	padding: 0;
+	overflow: hidden;
+	background-color: #18283f;
 }
 
 .nav_content li {
+    display: table-cell;
     float: left;
 }
-
+		
 .nav_content li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 4px 16px;
-    text-decoration: none;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 4px 16px;
+	text-decoration: none;
+   border-bottom: 4px;
+	border-bottom-style: solid;
+	border-color: transparent;
 }
 
-/* Change the link color to #111 (black) on hover */
 .nav_content li a:hover {
-    background-color: #182830;
+   background-color: #18284f;
 }
 
 .nav_content .active {
-    background-color: #4CAF50;
+   border-bottom-color: #4CAF50;
 }
+
+
 
 .headersep {
 	position: relative;
@@ -203,7 +200,7 @@ table.invisible {
 	margin-bottom: 0px;
 	margin-left: auto;
 	position: relative;
-	width: 700px;
+	max-width: 700px;
 }
 
 .main_block {
@@ -220,7 +217,7 @@ table.invisible {
 	width: 100%;
 	#background-color: #dddddd;
 	
-	font-family: Helvetica, Arial, sans-serif;
+	#font-family: Helvetica, Arial, sans-serif;
 	font-size: 200%;
 	font-weight: bold;
 	color: #562f32;
@@ -262,9 +259,14 @@ table.invisible {
 }
 
 .footer_content {
-	width: 700px;
+	max-width: 700px;
 	margin:auto;
 	margin-top: 10px;
 	margin-bottom: 20px;
+}
+
+.block_icn {
+	padding-right: .75em;
+	height: 1em;
 }
 
