--- a/style.css
+++ b/style.css
@@ -1,54 +1,78 @@
 /*** Global Settings ****/
+@media screen and (min-width: 700px) and (orientation:landscape) {
+:root {
+	--content-min-width: 700px;
+	--content-max-width: 700px;
+}
+}
+
+@media screen and (orientation:portrait) {
+:root {
+	--content-min-width: 95%;
+	--content-max-width: 95%;
+}
+}
+
+:root {
+	--cin-beige: #e7e1c6;
+	--cin-bordeaux: #562f32;
+	--cin-navy: #18283f;
+}
+
 body {
-	color : #18283f;
-	margin : 0;
-	padding : 0;
+	color: var(--cin-navy);
+	margin: 0;
+	padding: 0;
 	background: transparent;
-	font-family: Helvetica, Arial, sans-serif;
-	#font-size: 16pt;
+	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+	font-size: 1em;
 }
 
 p {
 	padding: 0px;
-	margin: 0px;
-	margin-top: 5px;
-	font-size: 120%;
-	color: #18283f;
+	margin: 1em 0 0;
+	font-size: 1.2em;
+	color: var(--cin-navy);
 }
 
 ul {
-    list-style-type: square;
-    color: #562f32;
+	list-style-type: square;
+	color: var(--cin-bordeaux);
 }
 
 li {
-    font-size: 120%;	
-	color: #18283f;
+	font-size: 1.2em;
+	color: var(--cin-navy);
 }
 
-a:link, a:visited {
-    font-weight: bold;
-    text-decoration: none;
-    color: #562f32;
+a:link,
+a:visited {
+	font-weight: bold;
+	text-decoration: none;
+	color: var(--cin-bordeaux);
 }
 
 a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
-
 h1 {
-    font-size: 160%;
-    #margin: .5em 0em 0em .25em;
-	color: #562f32;
+	font-size: 1.6em;
+	color: var(--cin-bordeaux);
 }
 
 h2 {
-    font-size: 140%;
-    #margin: .5em 0em 0em .25em;
-	color: #562f32;
+	font-size: 1.4em;
+	color: var(--cin-bordeaux);
 }
 
+img.display {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
+}
 
 table.invisible {
 	border-top-style: none;
@@ -62,13 +86,42 @@ table.invisible {
 	padding: 0px;
 }
 
+table {
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+	border-top-width: 0px;
+	border-right-width: 0px;
+	border-bottom-width: 0px;
+	border-left-width: 0px;
+	padding: 2px;
+}
+
+td.heading {
+	font-weight: bold;
+	color: white;
+	background-color: var(--cin-navy);
+	padding-left: 6px;
+	vertical-align: top;
+}
+
+td.light {
+	background: transparent;
+	padding-left: 6px;
+	vertical-align: top;
+}
+
+td.dark {
+	background: #e7e1c6;
+	padding-left: 6px;
+	vertical-align: top;
+}
+
 .header {
 	position: fixed;
 	z-index: 0;
 }
-
-
-
 
 .header_fixed {
 	position: fixed;
@@ -76,21 +129,19 @@ table.invisible {
 	left: 0;
 	width: 100%;
 	height: 60px;
-	background-color:#e7e1c6;
+	background-color: var(--cin-beige);
 	color: white;
 	z-index: +1;
 }
 
 .header_content {
-   display: flex;
-   align-items: center;
-	max-width: 700px;
-	height: 60px;
 	position: relative;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
+	display: flex;
+	align-items: center;
+	min-width: var(--content-min-width);
+	max-width: var(--content-max-width);
+	height: 60px;
+	margin: auto;
 	background-image: url(images/cin_logo_header.png);
 	background-position: right;
 	background-repeat: no-repeat;
@@ -99,11 +150,12 @@ table.invisible {
 }
 
 .header_title {
-	color: #562f32;
+	margin: 0;
+	color: var(--cin-bordeaux);
 	font-size: 200%;
+	line-height: 100%;
 	font-weight: bold;
 }
-
 
 .banner {
 	position: relative;
@@ -114,114 +166,115 @@ table.invisible {
 	width: 100%;
 	height: 250px;
 	padding-top: 0px;
-	background-color: #e7e1c6;
+	background-color: var(--cin-beige);
 }
 
 .banner_content {
 	position: relative;
+	display: flex;
+	flex-flow: column;
+	flex-wrap: wrap;
+	align-content: space-around;
 	margin: auto;
 	height: 250px;
-	max-width: 700px;
+	min-width: var(--content-min-width);
+	max-width: var(--content-max-width);
 	background-image: url(images/alan_turing.png);
 	background-position: left;
 	background-repeat: no-repeat;
-	text-align: right;
 	padding: 0px;
 }
 
-.banner_title {
-	color: #562f32;
-	#font-family: Helvetica, Arial, sans-serif;
+p.banner_title {
+	position: relative;
+	margin: auto auto auto 0;
+	width: 100%;
+	color: var(--cin-bordeaux);
 	font-size: 300%;
 	font-weight: bold;
 	line-height: 100%;
-	#text-shadow: 2px 2px white;
-	margin-top: 25px;
-   text-align: right;
+	text-align: right;
 }
 
-.banner_subtitle {
-	color: #18283f;
+p.banner_subtitle {
+	position: relative;
+	margin: auto auto auto 0;
+	width: 100%;
+	color: var(--cin-navy);
 	font-size: 160%;
-	#font-family: Helvetica, Arial, sans-serif;
 	font-weight: bold;
-	#text-shadow: 2px 2px white;
 	line-height: 140%;
-	margin-top: 15px;
-   text-align: right;
+	text-align: right;
 }
 
 .nav {
 	position: relative;
 	width: 100%;
-	border-top-color:white;
+	border-top-color: white;
 	border-top-style: solid;
 	border-top-width: medium;
 	border-bottom-color: white;
 	border-bottom-style: solid;
 	border-bottom-width: medium;
-	#height: 40px;
-	background-color: #18283f;
+	background-color: var(--cin-navy);
 }
 
 .nav_fixed {
 	position: fixed;
 	top: 60px;
 	width: 100%;
-	border-top-color:white;
+	border-top-color: white;
 	border-top-style: solid;
 	border-top-width: medium;
 	border-bottom-color: white;
 	border-bottom-style: solid;
 	border-bottom-width: medium;
-	#height: 40px;
-	background-color: #18283f;
+	background-color: var(--cin-navy);
 	z-index: +1;
 }
 
 .nav_content {
 	display: flex;
 	align-items: center;
-   max-width: 700px;
-   margin: auto;
-   font-size: 140%;
-   color: white;
+	max-width: var(--content-max-width);
+	margin: auto;
+	font-size: 140%;
+	color: white;
 }
- 
 
 .nav_content ul {
 	display: table;
 	list-style-type: none;
- 	margin: 0 auto;
+	margin: 0 auto;
 	padding: 0;
 	overflow: hidden;
 	margin-bottom: 1px;
-	background-color: #18283f;
+	background-color: var(--cin-navy);
 }
 
 .nav_content li {
-    display: table-cell;
-    float: left;
+	font-size: 1.4em;
+	display: table-cell;
+	float: left;
 }
-		
+
 .nav_content li a {
 	display: block;
 	color: white;
 	text-align: center;
 	padding: 4px 16px;
 	text-decoration: none;
-    border-bottom: 4px;
+	border-bottom: 4px;
 	border-bottom-style: solid;
 	border-color: transparent;
 }
 
 .nav_content li a:hover {
-   background-color: #18284f;
+	background-color: #18284f;
 }
 
 .nav_content .active {
-   border-bottom-color: #e7e1c6;
-   #border-bottom-color: #4CAF50;
+	border-bottom-color: var(--cin-beige);
 }
 
 .headersep {
@@ -237,7 +290,8 @@ table.invisible {
 	margin-bottom: 0px;
 	margin-left: auto;
 	position: relative;
-	max-width: 700px;
+	min-width: var(--content-min-width);
+	max-width: var(--content-max-width);
 }
 
 .main_block {
@@ -246,35 +300,33 @@ table.invisible {
 	padding: 0px;
 }
 
-
-.block_header {	
+.block_header {
 	position: relative;
 	padding: 5px;
 	margin: 0px;
 	width: 100%;
-	#background-color: #dddddd;
-	
-	#font-family: Helvetica, Arial, sans-serif;
+	border-bottom: 1px;
+	border-bottom-color: #dddddd;
+	border-bottom-style: solid;
 	font-size: 200%;
 	font-weight: bold;
-	color: #562f32;
+	color: var(--cin-bordeaux);
 	margin-top: 15px;
 }
 
-.block_header a a:visited, a:link {
-	color: #562f32;
-	text-decoration : none;
+.block_header a a:visited,
+a:link {
+	color: var(--cin-bordeaux);
+	text-decoration: none;
 	background: none;
 }
 
 .block_header a:hover {
-	color: #562f32;
+	color: var(--cin-bordeaux);
 	text-decoration: none;
-	#font-weight: bolder;
 	text-shadow: 1px 1px #d0d0d0;
 	background: none;
 }
-
 
 .block_body {
 	position: relative;
@@ -282,7 +334,6 @@ table.invisible {
 	padding: 5px;
 	padding-top: 15px;
 	width: 100%;
-	#background-color: #eeeeee;
 }
 
 .block_icn {
@@ -292,33 +343,21 @@ table.invisible {
 
 .footer {
 	width: 100%;
-	clear : both;
+	clear: both;
 	padding: 5px;
 	margin-left: 1px;
 	margin-right: 1px;
-	margin-top: 30px;
-	background-image: url(images/footer_bg.png);
+	margin-top: 3em;
+	background: linear-gradient(#eeeeee, white, white);
 }
 
 .footer_content {
-	max-width: 700px;
-	margin:auto;
-	margin-top: 10px;
+	min-width: var(--content-min-width);
+	max-width: var(--content-max-width);
+	margin: auto;
+	margin-top: 2em;
 	margin-bottom: 20px;
 	align-items: left;
 	font-size: 100%;
-	color: #aaaaaa;
-}
-
-
-.credits {
-	text-align : center;
-	padding-top: 3px;
-	padding-right: 10px;
-	padding-bottom: 3px;
-	padding-left: 10px;
-	margin: 0px;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 12px;
 	color: #aaaaaa;
 }
