--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 p {
 	padding: 0px;
 	margin: 1em 0 0;
-	font-size: 1.2em;
+	font-size: 1.2rem;
 	color: var(--cin-navy);
 }
 
@@ -49,7 +49,7 @@ ul {
 }
 
 li {
-	font-size: 1.2em;
+	font-size: 1.2rem;
 	color: var(--cin-navy);
 }
 
@@ -187,7 +187,7 @@ td.dark {
 	height: 250px;
 	min-width: var(--content-min-width);
 	max-width: var(--content-max-width);
-	background-image: url(images/alan_turing.png);
+	background-image: url(images/banner_bg.png);
 	background-position: left;
 	background-repeat: no-repeat;
 	padding: 0px;
